[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/vcrosdmonorusbyd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 140, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 140, 20 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="main_menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="center" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0

[node name="top" type="Control" parent="center"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="lbl" type="Label" parent="center/top"]
margin_left = -145.0
margin_top = 5.0
margin_right = 146.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Разработано студентом ПИ-429б Хусаиновым А.С."
align = 1
autowrap = true

[node name="lbl2" type="Label" parent="center/top"]
self_modulate = Color( 0.784314, 1, 0, 1 )
margin_left = -145.0
margin_top = 119.0
margin_right = 146.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
text = "Система контроля транспортным движением"
align = 1
autowrap = true

[node name="center" type="Control" parent="center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="to_main" type="TouchScreenButton" parent="center/center"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 2 )
shape_centered = false

[node name="lbl" type="Label" parent="center/center/to_main"]
show_behind_parent = true
margin_left = -145.0
margin_top = -10.0
margin_right = 146.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Сцена симуляции: полная"
align = 1
autowrap = true

[node name="to_test" type="TouchScreenButton" parent="center/center"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 92 )
shape = SubResource( 3 )
shape_centered = false

[node name="lbl" type="Label" parent="center/center/to_test"]
show_behind_parent = true
margin_left = -145.0
margin_top = -19.0
margin_right = 146.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Сцена симуляции: тестовая"
align = 1
autowrap = true

[node name="car_ammount" type="TextEdit" parent="center/center"]
margin_left = 224.0
margin_top = -10.0
margin_right = 413.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
text = "250"

[node name="lbl" type="Label" parent="center/center"]
show_behind_parent = true
margin_left = 224.0
margin_top = -41.0
margin_right = 515.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 1 )
text = "Количество машин: "
autowrap = true

[connection signal="pressed" from="center/center/to_main" to="." method="_on_to_main_pressed"]
[connection signal="pressed" from="center/center/to_test" to="." method="_on_to_test_pressed"]
